Changes between nazghul-0.1.2 and nazghul-0.1.3

gmcnutt:

o Added the create_object api call for mech and conversations scriptlets. This
  creates a simple object like an armament or item.

o Added the create_npc_party api call for same. This creates npc parties and
  adds them to the specified place (haven't tested created them in other
  places, but the support is all there). Works in combat (dungeon rooms), too.

o Added a new engine-supported mech signal: MECH_TURN, which is delivered every
  turn to every mechanism within the player's current place.

o Added some new mechanism macros in the examples to test the new
  constructs. See the wilderness, the slime cave and Green Tower for example
  usage.

o Added a ^z for map editing. This toggles map zooming.

o Created a simple inn where the player can check out a room to sleep
  in. Haven't perfected the logic behind locking the player back out when he's
  done, or kicking him out if he sleeps too long, etc. I wanted to this
  completely with mechs, and I think it can be done (except for the kicking out
  of bed part). Maybe Sam can figure out a nice way to do inns, it seems like
  his kind of puzzle.

o Npc parties now wake up the player if he is sleeping in their bed. They don't
  throw him out like they do in u5, but they will keep waking the player up
  until he moves and let's them get into bed.

o When npc parties are asleep they show a different sprite (if any species in
  the party has a 'sleep_sprite' specified)

o The player can now sleep in beds when in town. Added a bed object.

o Added slimes. Hacked in a cloning effect to make them work, and added an
  immunities field to species to make them immune to poison. I actually had
  about 50% of a new effects system implemented when I gave up because of all
  the boring parsing code boilerplate, and it was going into overtime
  tonight. I saved my protoype header file for the effects system in the