@@ -2,6 +2,12 @@ Changes between nazghul-0.1.2 and nazghul-0.1.3
 
 gmcnutt:
 
+o Added a mandrake patch to the wilderness. This required a fair amount of new,
+  special-case engine support, which annoys me: a MECH_FULL_MOON signal is
+  supported by the engine and delivered to every mech in the game whenever
+  either moon hits phase 0 (which the engine assumes to be full... see what I
+  mean? warty).
+
 o Added the create_object api call for mech and conversations scriptlets. This
   creates a simple object like an armament or item.
 
